--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,6 +29,7 @@
                 <h2><a href='/auth/google'>log in with google</a></h2>
             {{/if}}
             <li role="presentation"><a href="/users/signup">Sign Up</a></li>
+            <li role="presentation"><a href="/all_products">All Products</a></li>
             <li role="presentation"><a href="/users/login">Log In</a></li>
             <li role="presentation"><a href="/users/logout">Log out</a></li>
         </ul>
@@ -42,26 +43,33 @@
             <div class="modal-content login-background">
                 <main class='login'>
                     <!-- <img class='' src='http://mooxidesign.com/wp-content/uploads/2015/11/vegetable-set-3.jpg'> -->
-                    <h1 class='login'>Log In</h1>
-                    <div class="center-block form-group">
-                        <label class='form-control'>Email</label>
-                        <input type='text' name='email'></input>
+                    <!-- <h1 class='login'>Log In</h1> -->
+                    <!-- <div class="center-block form-group"> -->
+<form class="form-group" action="/users/login" method='post'>
+    <!-- <ul class='errors'>
+        {{#errors}}
+        <li><b>{{this}}</b></li>
+        {{/errors}}
+    </ul> -->
+    <label class='form-control'>Email</label>
+    <input class='form-control' type='text' name='email'></input>
+    <label class='form-control'>Password</label>
+    <input class='form-control' type='password' name='password'></input>
+    <button type="submit" class="btn btn-default">Submit</button>
+
+    <a href='/'>Home</a>
+</form>
 
 
 
 
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
+
+
+                    <!-- </div> -->
 
 
 
-                    <form class='login center-block' action='/users/login' method='post'>
-                        <ul class='errors'>
-                            {{#errors}}
-                                <li><b>{{this}}</b></li>
-                            {{/errors}}
-                        </ul>
+                    <!-- <form class='login center-block' action='/users/login' method='post'>
                         <br>
                         <label for='name'>Email</label>
                         <input type='text' name='email'></input>
@@ -72,9 +80,8 @@
                         <br>
                         <br>
                         <button type='submit'>Log In</button>
-                    </form>
+                    </form> -->
 
-                    <a href='/'>Home</a>
                 </main>
             </div>
         </div>
