--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
 
 <div class='row main-pic'>
   <div class='col-md-12'>
-    <img class='landing center-block' src='https://static.pexels.com/photos/3329/food-kitchen-cutting-board-cooking-large.jpg'>
+    <img class='landing center-block' src='./images/food-kitchen-cutting-board-cooking-large.jpg'>
   </div>
   <h1 class='header'>gnosh.</h1>
   <h4 class='header text-center'>All the snacks you need. <br>Right to your door.</h4>
@@ -96,3 +96,28 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div> <!-- Carousel -->
+<div class="container col-md-offset-1 col-md-11">
+<div class="row">
+    <div class="thumbnail col-md-3">
+      <img style="height:200px" src="http://naturalwayforhealth.com/wp-content/uploads/2014/09/organic-food.jpg" alt="fresh">
+      <div class="caption">
+        <h3>How did it all started</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+      </div>
+    </div>
+    <div class="thumbnail col-md-3 col-md-offset-1">
+      <img style="height:200px" src="http://ec.europa.eu/agriculture/organic/images/standard/ec_organic_189.jpg" alt="cheese">
+      <div class="caption">
+        <a href="/products"><h3>Our Baskets</h3></a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+      </div>
+    </div>
+    <div class="thumbnail col-md-3 col-md-offset-1">
+      <img style="height:200px" src="http://outoftheboxcollective.com/files/Food%20box%20delivery.jpeg" alt="delivery">
+      <div class="caption">
+        <h3>our Mission</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+      </div>
+    </div>
+</div>
+</div>
