--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
 
 <body>
   {{{body}}}
-
+  <script type="text/javascript" src="/javascript/main.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </body>
