--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,21 +1,25 @@
 <main class='login'>
-  <img class='login-background' src='http://mooxidesign.com/wp-content/uploads/2015/11/vegetable-set-3.jpg'>
-  <h1 class='login'>Log In</h1>
+<h2 class='login'>Log In</h2>
   <form class='login center-block' action='/users/login' method='post'>
     <ul class='errors'>
       {{#errors}}
       <li><b>{{this}}</b></li>
       {{/errors}}
     </ul>
-    <br>
-    <label for='name'>Email</label>
-    <input type='text' name='email'></input>
-    <br><br>
-    <label for='email'>Password</label>
-    <input type='password' name='password'></input>
-    <br><br>
-    <button type='submit'>Log In</button>
-  </form>
+    <form class="form-group" action="/users/login" method='post'>
+          <ul class='errors'>
+              {{#errors}}
+              <li><b>{{this}}</b></li>
+              {{/errors}}
+          </ul>
+          <label class='form-control'>Email</label>
+          <input class='form-control' type='text' name='email'></input>
+          <label class='form-control'>Password</label>
+          <input class='form-control' type='password' name='password'></input>
+          <button type="submit" class="btn btn-default">Submit</button>
 
-  <a href='/'>Home</a>
+          <!-- <a href='/'>Home</a> -->
+      </form>
+
+
 </main>
