--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,10 @@ body {
     width:200px;
     color:white;
 }
+.google {
+    width:80%;
+}
+
 
 /* Top Navbar */
 
@@ -31,6 +35,14 @@ body {
 div.cart {
   text-align: left;
   margin-top: 5px;
+
+}
+#cartButton {
+    width:75px;
+    height:30px;
+    /*padding-top: 2%;*/
+    font-size: 20px;
+
 }
 
 ul.dropdown-menu > li {
@@ -161,4 +173,8 @@ h1.login, h1.signup {
 /* email format items */
 .thumbnail {
   width:25%;
+}
+
+#bottomPanel {
+    background-color: rgb(159, 187, 128);
 }
