--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,161 +1,157 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container nav-container">
-        <div  class="dropdown cart">
+        <div class="dropdown cart">
             <button id="cartButton" class="btn btn-default  dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Cart
-            <span class="caret"></span>
+                Cart
+                <span class="caret"></span>
             </button>
-                <table class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
-                    <tr>
+            <table class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
+                <tr>
                     <td></td>
-                    </tr>
-                    <tr id='total'>
-                        <td><b>Total:</b></td>
-                        <td>$total</td>
-                    </tr>
-                    </table>
-                </div>
-                <div class="text-right">
-                    {{#if user}}
-                    {{#if photo}}
-                        <img src="{{photo}}" />
-                    {{/if}}
-                    <h3>Welcome, {{name}}!</h3>
-                    <a class="logout" href="/users/logout">Log out</a>
+                </tr>
+                <tr id='total'>
+                    <td><b>Total:</b></td>
+                    <td>$total</td>
+                </tr>
+            </table>
+        </div>
+        <div class="text-right">
+            {{#if user}}
+                {{#if photo}}
+                    <img src="{{photo}}" />
                 {{/if}}
-                </div>
-</div>
+                <h3>Welcome, {{name}}!</h3>
+                <a class="logout" href="/users/logout">Log out</a>
+            {{/if}}
 
-<!-- Modal Button -->
-<div class="text-center">
+            {{#unless user}}
 
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Login or Sign up!
-</button>
-</div>
+                <div class="text-center">
 
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                        Login or Sign up!
+                    </button>
+            {{/unless}}
+            {{#if admin}}
+                <a href="/admin">Admin</a>
+            {{/if}}
+            </div>
+        </div>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"></h4>
-      </div>
-      <div  class="modal-body ">
-            <div class="text-center">
-                <a class='text-center' href='/auth/google'>
-                <img class="google" src="http://i.stack.imgur.com/XzoRm.png" alt="google oauth"/>
-                </a>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel"></h4>
+                    </div>
+                    <div class="modal-body ">
+                        <div class="text-center">
+                            <a class='text-center' href='/auth/google'>
+                                <img class="google" src="http://i.stack.imgur.com/XzoRm.png" alt="google oauth" />
+                            </a>
+                        </div>
+
+
+                        <form class="myInput form-group col-md-6" action="/users/login" method='post'>
+
+                            <ul class='errors'>
+                                {{#errors}}
+                                    <li><b>{{this}}</b></li>
+                                {{/errors}}
+                            </ul>
+                            <h2>Login</h2>
+                            <label class=''>Email</label>
+
+                            <input id="email" class='form-control' type='text' name='email' placeholder='email'></input>
+                            <label class=''>Password</label>
+                            <input id="password" class=' form-control' type='password' name='password' placeholder="password"></input>
+                            <button type="submit" class="btn btn-default">Submit</button>
+
+                            <!-- <a href='/'>Home</a> -->
+                        </form>
+                        <!-- signup form -->
+                        <form class='form-group signup center-block col-md-6 ' action='/users/signup' method='post'>
+                            <ul class='errors'>
+                                {{#errors}}
+                                    <li><b>{{this}}</b></li>
+                                {{/errors}}
+                            </ul>
+                            <h2>Sign Up!</h2>
+                            <label class='' for='email'>Email</label>
+                            <input class='form-control' type='text' name='email'></input>
+
+                            <label class='' for='first_name'>First Name</label>
+                            <input class='form-control' type='text' name='first_name'></input>
+
+                            <label class='' for='last_name'>Last Name</label>
+                            <input class='form-control' type='text' name='last_name'></input>
+
+                            <label class='' for='password'>Password</label>
+                            <input class='form-control' type='password' name='password'></input>
+
+                            <label class='' for='confirm'>Confirm Password</label>
+                            <input class='form-control' type='password' name='confirm'></input>
+
+                            <button class='btn btn-default' type='submit'>Sign Up!</button>
+                        </form>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
-
-
-          <form   class="myInput form-group col-md-6"action="/users/login" method='post'>
-
-                <ul class='errors'>
-                    {{#errors}}
-                    <li><b>{{this}}</b></li>
-                    {{/errors}}
-                </ul>
-                <h2>Login</h2>
-                <label class=''>Email</label>
-
-                <input id="email" class='form-control' type='text' name='email' placeholder='email'></input>
-                <label class=''>Password</label>
-                <input id="password"class=' form-control' type='password' name='password' placeholder="password"></input>
-                <button type="submit" class="btn btn-default">Submit</button>
-
-                <!-- <a href='/'>Home</a> -->
-            </form>
-            <!-- signup form -->
-            <form class='form-group signup center-block col-md-6 ' action='/users/signup' method='post'>
-              <ul class='errors'>
-                {{#errors}}
-                <li><b>{{this}}</b></li>
-                {{/errors}}
-              </ul>
-              <h2>Sign Up!</h2>
-              <label class='' for='email'>Email</label>
-              <input class='form-control' type='text' name='email'></input>
-
-              <label class='' for='first_name'>First Name</label>
-              <input class='form-control' type='text' name='first_name'></input>
-
-              <label class='' for='last_name'>Last Name</label>
-              <input class='form-control' type='text' name='last_name'></input>
-
-              <label class='' for='password'>Password</label>
-              <input class='form-control' type='password' name='password'></input>
-
-              <label class='' for='confirm'>Confirm Password</label>
-              <input class='form-control' type='password' name='confirm'></input>
-
-              <button class='btn btn-default' type='submit'>Sign Up!</button>
-            </form>
-
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+        </div>
 
 </nav>
-
 <div class='row main-pic'>
-
-    <div class='col-md-12'>
-        <img class='landing center-block' src='https://static.pexels.com/photos/3329/food-kitchen-cutting-board-cooking-large.jpg'>
-    </div>
-
-    <h1 class='header'>gnosh.</h1>
-    <h4 class='header text-center'>All the snacks you need. <br>Right to your door.</h4>
-
+ <div class='col-md-12'>
+   <img class='landing center-block' src='./images/food-kitchen-cutting-board-cooking-large.jpg'>
+ </div>
+ <h1 class='header'>gnosh.</h1>
+ <h4 class='header text-center'>All the snacks you need. <br>Right to your door.</h4>
 </div>
-
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" interval="false" wrap='true'>
 
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+ <!-- Indicators -->
+ <ol class="carousel-indicators">
+   <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+   <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+   <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+ </ol>
 
-  <!-- Wrapper for slides -->
-  <div class='carousel-inner'>
-    <div class="item active">
-      <div>
-        <img class='first-slide center-block' src="http://www.zillow.com/blog/files/2012/11/Knife-on-cutting-board.jpg" alt="...">
-      </div>
-      <div class='text-center item-description'>
-          <h3>Check Out Our Goodies!</h3>
-        <p>All the gnosh</p>
-      </div>
-    </div>
-    {{#items}}
-    <div class='item'>
-      <div>
-        <img class='item-pic center-block form-control form-group' src='{{this.image_url}}'>
-      </div>
-      <div class='text-center'>
-        <h3>{{this.name}}</h3>
-        <p>{{this.description}}</p>
-        <div>
-          <form class="" action="/cart/add/{{this.id}}" method="post">
-            <input class='add-to-cart' type='submit' value='Add to Cart'>
-          </form>
-        </div>
-      </div>
-    </div>
-    {{/items}}
-  </div>
-
-  <!-- Controls -->
+ <!-- Wrapper for slides -->
+ <div class='carousel-inner'>
+   <div class="item active">
+     <div>
+       <img class='first-slide center-block' src="http://www.zillow.com/blog/files/2012/11/Knife-on-cutting-board.jpg" alt="...">
+     </div>
+     <div class='text-center item-description'>
+         <h3>Check Out Our Goodies!</h3>
+       <p>All the gnosh</p>
+     </div>
+   </div>
+   {{#items}}
+   <div class='item'>
+     <div>
+       <img class='item-pic center-block form-control form-group' src='{{this.image_url}}'>
+     </div>
+     <div class='text-center'>
+       <h3>{{this.name}}</h3>
+       <p>{{this.description}}</p>
+       <div>
+         <form class="" action="/cart/add/{{this.id}}" method="post">
+           <input class='add-to-cart' type='submit' value='Add to Cart'>
+         </form>
+       </div>
+     </div>
+   </div>
+   {{/items}}
+ </div>
+ <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
@@ -163,9 +159,30 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div> <!-- Carousel -->
-
-
-
+<div class="container col-md-offset-1 col-md-11">
+<div class="row">
+    <div class="thumbnail col-md-3">
+      <img style="height:200px" src="http://naturalwayforhealth.com/wp-content/uploads/2014/09/organic-food.jpg" alt="fresh">
+      <div class="caption">
+        <h3>How did it all started</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+      </div>
+    </div>
+    <div class="thumbnail col-md-3 col-md-offset-1">
+      <img style="height:200px" src="http://ec.europa.eu/agriculture/organic/images/standard/ec_organic_189.jpg" alt="cheese">
+      <div class="caption">
+        <a href="/products"><h3>Our Baskets</h3></a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+      </div>
+    </div>
+    <div class="thumbnail col-md-3 col-md-offset-1">
+      <img style="height:200px" src="http://outoftheboxcollective.com/files/Food%20box%20delivery.jpeg" alt="delivery">
+      <div class="caption">
+        <h3>our Mission</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+      </div>
+    </div>
+</div>
 <!-- bottom panel -->
 <div id="bottomPanel" class="panel panel-default col-md-12">
   <div class="panel-body">
