--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -8,6 +8,7 @@
   </div>
 </div>
 
+<div class="container adminContainer">  
 <div class="col-md-11 col-md-offset-1 admin">
   {{#errors}}
     <h4 class='danger'>{{this}}</h4>
@@ -115,4 +116,5 @@
       </form>
     </div>
   </div>
+</div>
 </div>
