--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -115,7 +115,15 @@
               </div>
           </div>
   </nav>
-  {{{body}}}
+
+
+    {{{body}}}
+
+    <footer class='footer'>
+      <div class="container">
+        <h3>Daniel, Matthew and Bud</h3>
+      </div>
+    </footer>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
