--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,9 +106,9 @@ h4.header {
 
 /* Listings */
 
-.item-pic {
-  height: 300px;
-  width: 300px;
+ .item-pic {
+  height:100x;
+  width: 100px;
   /*border-radius: 50%;*/
   margin-bottom: 10px !important;
 }
